fix card 3 spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -630,15 +630,23 @@ text.track {
               margin-right: 0;
               .album {
                 height: auto;
-                width: 30vw;
-                height: 30vw;
-                margin: 0.25rem;
+                width: 31vw;
+                height: 31vw;
+                margin: 0.15rem;
                 vertical-align: middle;
-                padding: 0.7rem;
+                padding: 0.5rem;
                 p {
                   color: $black;
                   max-width: 100%;
                   font-size: 0.8rem;
+                  // padding: 0.75rem;
+                }
+              }
+            }
+            &:last-of-type {
+              .albums {
+                .album {
+                  padding: 0.15rem;
                 }
               }
             }
